--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "http://hsankalp.github.io/portfolio",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
@@ -11,8 +12,7 @@
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.4.0",
-    "react-scroll": "^1.7.16"
+    "react-scripts": "3.4.0"
   },
   "scripts": {
     "start": "react-scripts start",
